<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:layout_marginStart="0px"
            android:layout_marginLeft="0px"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/loanLabel"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/loan_amount"
                android:textSize="30sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/loanAmountInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Unit"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/loanYears"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/loan_term"
                android:textSize="30sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/loanTermInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/write_in_year"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/interestRateLabel"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:text="@string/annual_interest_rate"
                android:textSize="30sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/interestRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Percentage"
                android:importantForAutofill="no"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/buttonCalculate"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:text="Calculate" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/monthlyLabel"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:layout_marginTop="220dp"
                android:fontFamily="monospace"
                android:text="@string/monthly_payments"
                android:textSize="18sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="79dp">

                <TextView
                    android:id="@+id/unitLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/Unit"
                    android:textSize="36sp" />

                <TextView
                    android:id="@+id/resultMonthly"
                    android:layout_width="143dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="10dp"
                    android:text="@string/Initial"
                    android:textSize="36sp" />
            </TableRow>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>